etape3-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digital-social-score
  labels:
    app: dss-api
    environment: production
    project: digital-social-score
